# Real-Time-Personalization-Pricing-Intelligence-Platform

./: .env.example  Dockerfile  Dockerfile.gpu  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-colab-gpu.txt  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
api/: __init__.py  main.py
app/: __init__.py  dashboard.py
data/feature_store/: feature_registry.json  inventory_features.csv  pricing_features.csv  user_features.csv
data/processed/: clean_events.csv  customer_segments.csv  dashboard_summary.json  monitoring_snapshot.csv  recommendation_outputs.csv  sessionized_events.csv  streaming_event_microbatches.csv  validation_report.json
data/raw/: demand.csv  pricing.csv  product_catalog.csv  session_events.csv
data/sample/: dashboard_snapshot.json  model_registry.json
docs/: api_examples.md  architecture.md  colab_gpu.md  kubernetes.md
k8s/: api-deployment.yaml  api-hpa.yaml  api-service.yaml  configmap.yaml  dashboard-deployment.yaml  dashboard-service.yaml  data-pvc.yaml  kustomization.yaml  models-pvc.yaml  namespace.yaml
models/: demand_forecaster.joblib  dynamic_pricing.joblib  model_registry.json  two_stage_recommender.joblib
notebooks/: README.md
reports/: business_impact.md  model_card.md
scripts/: run_pipeline.py
tests/: test_api_endpoints.py  test_enterprise_data_generation.py  test_feature_store.py  test_forecasting_monitoring.py  test_kubernetes_manifests.py  test_metrics.py  test_pricing_rules.py  test_recommendation_system.py  test_validation_and_features.py
(+41 files in other folders)
